Ultimas mejoras todo corregido

--- a/agentes/templates/AgenteListView/index.html
+++ b/agentes/templates/AgenteListView/index.html
@@ -33,7 +33,7 @@
           En Destino Punta, nuestro equipo es tu confiable camino hacia el hogar perfecto. Con experiencia sólida y dedicación incomparable, estamos aquí para convertir tus sueños inmobiliarios en realidad, ofreciéndote seguridad y conexión en cada paso del camino.
         </p>
       </div>
-      <div class="row">
+      <div class="row justify-content-center">
         {% for agente in data.agentes %}
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
