--- a/contacto/templates/contacto.html
+++ b/contacto/templates/contacto.html
@@ -1,110 +1,117 @@
 {% extends 'base.html' %}
-{% block title %}Contacto{% endblock title %}
-
+{% block title %}
+    Contacto
+{% endblock title %}
 {% block active_contacto %}active{% endblock %}
 {% load static %}
-
 {% block css %}
-<link href="{% static 'assets/css/contacto.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/contacto.css' %}" rel="stylesheet">
 {% endblock %}
-
 {% block content %}
-<section id="breadcrumbs" class="breadcrumbs">
-    <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-            <h2>Contacto</h2>
-            <ol>
-                <li><a href="{% url 'inicio:home' %}">Inicio</a></li>
-                <li>Contacto</li>
-            </ol>
+    <section id="breadcrumbs" class="breadcrumbs">
+        <div class="container">
+            <div class="d-flex justify-content-between align-items-center">
+                <h2>Contacto</h2>
+                <ol>
+                    <li>
+                        <a href="{% url 'inicio:home' %}">Inicio</a>
+                    </li>
+                    <li>Contacto</li>
+                </ol>
+            </div>
         </div>
-
+    </section>
+    <!-- End Breadcrumbs -->
+    <!-- ======= Contact Section ======= -->
+    <div class="map-section">
+        {% if informacion_empresa.maps %}
+            <iframe style="border:0;
+                           width: 100%;
+                           height: 350px"
+                    src="{{ informacion_empresa.maps }}"
+                    frameborder="0"
+                    allowfullscreen></iframe>
+        {% endif %}
     </div>
-</section><!-- End Breadcrumbs -->
-
-<!-- ======= Contact Section ======= -->
-<div class="map-section">
-    <iframe style="border:0; width: 100%; height: 350px;"
-        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
-        frameborder="0" allowfullscreen></iframe>
-</div>
-
-<section id="contact" class="contact">
-    <div class="container">
-        <div class="row justify-content-center" data-aos="fade-up">
-
-            <div class="col-lg-10">
-
-                <div class="info-wrap">
-                    <div class="row">
-                        <div class="col-lg-4 info">
-                            <i class="bi bi-geo-alt"></i>
-                            <h4>Dirección:</h4>
-                            <p>A108 Adam Street<br>New York, NY 535022</p>
-                        </div>
-
-                        <div class="col-lg-4 info mt-4 mt-lg-0">
-                            <i class="bi bi-envelope"></i>
-                            <h4>Correo electrónico:</h4>
-                            <p>info@example.com<br>contact@example.com</p>
-                        </div>
-
-                        <div class="col-lg-4 info mt-4 mt-lg-0">
-                            <i class="bi bi-phone"></i>
-                            <h4>Teléfono:</h4>
-                            <p>+1 5589 55488 51<br>+1 5589 22475 14</p>
+    <section id="contact" class="contact">
+        <div class="container">
+            <div class="row justify-content-center" data-aos="fade-up">
+                <div class="col-lg-10">
+                    <div class="info-wrap">
+                        <div class="row">
+                            <div class="col-lg-4 info">
+                                <i class="bi bi-geo-alt"></i>
+                                <h4>Dirección:</h4>
+                                <p>
+                                    A108 Adam Street
+                                    <br>
+                                    New York, NY 535022
+                                </p>
+                            </div>
+                            <div class="col-lg-4 info mt-4 mt-lg-0">
+                                <i class="bi bi-envelope"></i>
+                                <h4>Correo electrónico:</h4>
+                                <p>
+                                    info@example.com
+                                    <br>
+                                    contact@example.com
+                                </p>
+                            </div>
+                            <div class="col-lg-4 info mt-4 mt-lg-0">
+                                <i class="bi bi-phone"></i>
+                                <h4>Teléfono:</h4>
+                                <p>
+                                    +1 5589 55488 51
+                                    <br>
+                                    +1 5589 22475 14
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-
             </div>
-
-        </div>
-
-        <div class="row mt-5 justify-content-center" data-aos="fade-up">
-            <div class="col-lg-10">
-                <form method="post" class="email-form" novalidate>
-                    <div class="row">
-                        <div class="col-md-6 form-group">
-                            <div class="form-floating">
-                                {{ form.nombre}}
-                                <label for="nombre">Nombre</label>
+            <div class="row mt-5 justify-content-center" data-aos="fade-up">
+                <div class="col-lg-10">
+                    <form method="post" class="email-form" novalidate>
+                        <div class="row">
+                            <div class="col-md-6 form-group">
+                                <div class="form-floating">
+                                    {{ form.nombre }}
+                                    <label for="nombre">Nombre</label>
+                                </div>
+                            </div>
+                            <div class="col-md-6 form-group mt-3 mt-md-0">
+                                <div class="form-floating">
+                                    {{ form.email }}
+                                    <label for="email">Correo Electrónico</label>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-md-6 form-group mt-3 mt-md-0">
+                        <div class="form-group mt-3">
                             <div class="form-floating">
-                                {{ form.email }}
-                                <label for="email">Correo Electrónico</label>
+                                {{ form.asunto }}
+                                <label for="asunto">Asunto</label>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="form-group mt-3">
-                        <div class="form-floating">
-                            {{ form.asunto }}
-                            <label for="asunto">Asunto</label>
+                        <div class="form-group mt-3">
+                            <div class="form-floating">
+                                {{ form.mensaje }}
+                                <label for="mensaje">Mensaje</label>
+                            </div>
                         </div>
-                    </div>
-
-                    <div class="form-group mt-3">
-                        <div class="form-floating">
-                            {{ form.mensaje }}
-                            <label for="mensaje">Mensaje</label>
+                        <div class="my-3">
+                            <div class="loading">Loading</div>
+                            <div class="error-message"></div>
+                            <div class="sent-message">Your message has been sent. Thank you!</div>
                         </div>
-                    </div>
-
-                    <div class="my-3">
-                        <div class="loading">Loading</div>
-                        <div class="error-message"></div>
-                        <div class="sent-message">Your message has been sent. Thank you!</div>
-                    </div>
-
-                    <div class="text-center"><button type="submit">Enviar Mensaje</button></div>
-                    {% csrf_token %}
-                </form>
+                        <div class="text-center">
+                            <button type="submit">Enviar Mensaje</button>
+                        </div>
+                        {% csrf_token %}
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-</section><!-- End Contact Section -->
+    </section>
+    <!-- End Contact Section -->
 {% endblock %}
