--- a/inmuebles/templates/InmuebleList/index.html
+++ b/inmuebles/templates/InmuebleList/index.html
@@ -26,7 +26,7 @@
   <!-- End Breadcrumbs -->
   <section id="inmuebles" class="inmuebles">
     <div class="container-fluid" data-aos="fade-up">
-      <div class="row">
+      <div class="row justify-content-center">
         {% include "./filtros.html" %}
         <div class="col-lg-9 entries">
           <section id="inmuebles" class="inmuebles">
