--- a/templates/base.html
+++ b/templates/base.html
@@ -44,8 +44,12 @@
             <section id="topbar" class="d-flex align-items-center">
                 <div class="container d-flex justify-content-center justify-content-md-between">
                     <div class="contact-info d-flex align-items-center">
-                        <i class="bi bi-envelope d-flex align-items-center"><a href="{{ informacion_empresa.correo_electronico }}">{{ informacion_empresa.correo_electronico }}</a></i>
-                        <i class="bi bi-phone d-flex align-items-center ms-4"><span>{{ informacion_empresa.telefono }}</span></i>
+                        {% if informacion_empresa.correo_electronico %}
+                            <i class="bi bi-envelope d-flex align-items-center"><a href="{{ informacion_empresa.correo_electronico }}">{{ informacion_empresa.correo_electronico }}</a></i>
+                        {% endif %}
+                        {% if informacion_empresa.telefono %}
+                            <i class="bi bi-phone d-flex align-items-center ms-4"><span>{{ informacion_empresa.telefono }}</span></i>
+                        {% endif %}
                     </div>
                     <div class="social-links d-none d-md-flex align-items-center">
                         {% if informacion_empresa.twitter %}
@@ -72,10 +76,17 @@
                                rel="noreferrer noopener"
                                class="bx bxl-linkedin"></a>
                         {% endif %}
-                        <a href="https://api.whatsapp.com/send?phone={{ informacion_empresa.telefono }}&text={{ informacion_empresa.msj_whatsapp }}"
-                           target="_blank"
-                           rel="noreferrer noopener"
-                           class="bx bxl-whatsapp bx-xs"></a>
+                        {% if informacion_empresa.telefono and informacion_empresa.msj_whatsapp %}
+                            <a href="https://api.whatsapp.com/send?phone={{ informacion_empresa.telefono }}&text={{ informacion_empresa.msj_whatsapp }}"
+                               target="_blank"
+                               rel="noreferrer noopener"
+                               class="bx bxl-whatsapp"></a>
+                        {% elif informacion_empresa.telefono %}
+                            <a href="https://api.whatsapp.com/send?phone={{ informacion_empresa.telefono }}"
+                               target="_blank"
+                               rel="noreferrer noopener"
+                               class="bx bxl-whatsapp"></a>
+                        {% endif %}
                     </div>
                 </div>
             </section>
@@ -87,7 +98,7 @@
                         <img height="110px"
                              width="110px"
                              src="{% if informacion_empresa.logo %} {{ informacion_empresa.logo.url }} {% endif %}"
-                             alt="{{ informacion_empresa.nombre_empresa }}"
+                             alt="Logo"
                              class="img-fluid">
                         <span class="company-name">{{ informacion_empresa.nombre_empresa }}</span>
                     </a>
@@ -223,10 +234,17 @@
                            rel="noreferrer noopener"
                            class="bx bxl-linkedin"></a>
                     {% endif %}
-                    <a href="https://api.whatsapp.com/send?phone={{ informacion_empresa.telefono }}&text={{ informacion_empresa.msj_whatsapp }}"
-                       target="_blank"
-                       rel="noreferrer noopener"
-                       class="bx bxl-whatsapp"></a>
+                    {% if informacion_empresa.telefono and informacion_empresa.msj_whatsapp %}
+                        <a href="https://api.whatsapp.com/send?phone={{ informacion_empresa.telefono }}&text={{ informacion_empresa.msj_whatsapp }}"
+                           target="_blank"
+                           rel="noreferrer noopener"
+                           class="bx bxl-whatsapp"></a>
+                    {% elif informacion_empresa.telefono %}
+                        <a href="https://api.whatsapp.com/send?phone={{ informacion_empresa.telefono }}"
+                           target="_blank"
+                           rel="noreferrer noopener"
+                           class="bx bxl-whatsapp"></a>
+                    {% endif %}
                 </div>
             </div>
         </footer>
