--- a/acceso/templates/acceso.html
+++ b/acceso/templates/acceso.html
@@ -58,7 +58,7 @@
                      required />
               <label for="password">Contraseña</label>
             </div>
-            <button class="button_login">Iniciar sesión</button>
+            <button type = "submit" name="login_form" class="button_login">Iniciar sesión</button>
           </form>
         </div>
         <div class="signup section-bg">
@@ -119,7 +119,7 @@
                      required />
               <label for="confirmar_password">Confirmar contraseña</label>
             </div>
-            <button>Registrarse</button>
+            <button type="submit" name="signup_form">Registrarse</button>
           </form>
         </div>
       </div>
