--- a/agentes/templates/AgenteListView/index.html
+++ b/agentes/templates/AgenteListView/index.html
@@ -38,7 +38,13 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src={{ agente.foto.url }} class="img-fluid" alt="" />
+                {% if agente.foto %}
+                  <img src={{ agente.foto.url }} class="img-fluid" alt="foto de asesor" />
+                {% else %}
+                  <img src="{% static 'assets/img/team/imagen_defecto.jpg' %}"
+                       class="img-fluid"
+                       alt="foto de asesor" />
+                {% endif %}
                 {% if agente.twitter or agente.facebook or agente.instagram or agente.linkedin %}
                   <div class="social">
                     {% if agente.twitter %}
